* Optimize Element className methods by removing support for edge case whitespace such as newlines and tabs. [jddalton, kangax]

* Changed the Class API for calling a super method in favor of T.J. Crowder's approach. [jddalton, kangax, T.J. Crowder]
  Note: A subclassed method may call it's super by:
    Subclass.callSuper(this, 'subMethod', arg1, arg2, ...); // OR
    Subclass.callSuper(this, arguments, arg1, arg2, ...);   // OR
    subMethod.$super.call(this, arg2, arg2, ...);           // OR
    arguments.callee.$super.call(this, arg2, arg2, ...);

* unit test: Correct Element#getStyle width/height test in IE6. [jddalton]

* Store RegExp patterns created while executing Element#removeClassName in a cache. [jddalton, Garrett Smith, kangax, YUI Team]

* Move `borderWidth`, `marginWidth`, `paddingWidth`, and height equivalents from Element#getStyle to Element#getDimensions. [jddalton]

* Optimize Element traversal methods `ancestors`, `next`, `nextSiblings`, `previous`, `previousSiblings`, `siblings`, and `up`. [jddalton, joneff, kangax]

* Add support for the MSXML2.XMLHTTP ActiveXObject because Microsoft.XMLHTTP is deprecated. [MooTools LH #739] [jddalton, lukasbuenger, Scott Kyle]

* Change Fuse.Version, Fuse.ScriptFragment and Fuse.JSONFilter to camelCase to be consistent with the rest of the codebase. [jddalton]

* Absorb pseudo private style helper methods into Element#getStyle and cleanup style.js and position.js. [jddalton]

* Add extraneous semicolons to make JSLint happy. [Diego Perini]

* Fix Fuse.Object.isSameOrigin() unit test when running from rake. [Diego Perini, jddalton]

* Implemented Element.getDimensions() options argument. [FuseJS LH #6] [Joe Gornick, jddalton]

* Stop Element#isVisible unit test from failing because IE6 doesn't respect 0px dimensions. [jddalton]

* Fix bugs/typos/unit tests in the Fuse.Ajax classes. [Diego Perini, jddalton]

* Ensure line breaks in the Fuse.Console output display correctly for IE6. [jddalton]
