@@ -1,4 +1,4 @@
-#style_test_1 { cursor: pointer; font-size:12px;}
+#style_test_1 { cursor: pointer; font-size:12px; }
 div.style-test { margin-left: 1px }
 
 #style_test_dimensions_container { 
